# plot-nine-fluid

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
notebooks/: aesthetic-mappings.html  aesthetic-mappings.qmd  anscombes-quartet.html  anscombes-quartet.qmd  bar-plot-with-2-variables.html  bar-plot-with-2-variables.qmd  facets.html  facets.qmd  geometric-objects.html  geometric-objects.qmd  please-i-want-some-more-labels.html  please-i-want-some-more-labels.qmd  scale-basics.html  scale-basics.qmd
scripts/: register-kernel.sh
